// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render a select that is disabled 1`] = `
<div
  class="select"
>
  <button
    class="displayValue dark"
    disabled=""
    type="button"
  >
    <div
      aria-label="sulu_admin.please_choose"
      class="croppedText"
      title="sulu_admin.please_choose"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        sulu_admin.p
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          lease_choose
        </span>
      </div>
      <div
        class="whole"
      >
        sulu_admin.please_choose
      </div>
    </div>
    <span
      aria-label="su-angle-down"
      class="su-angle-down toggle"
    />
  </button>
</div>
`;

exports[`The component should render a select that is disabled 2`] = `""`;

exports[`The component should render a select with dark skin 1`] = `
<div
  class="select"
>
  <button
    class="displayValue dark"
    type="button"
  >
    <div
      aria-label="sulu_admin.please_choose"
      class="croppedText"
      title="sulu_admin.please_choose"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        sulu_admin.p
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          lease_choose
        </span>
      </div>
      <div
        class="whole"
      >
        sulu_admin.please_choose
      </div>
    </div>
    <span
      aria-label="su-angle-down"
      class="su-angle-down toggle"
    />
  </button>
</div>
`;

exports[`The component should render a select with dark skin 2`] = `""`;
